scrollbars fix

--- a/src/app.css
+++ b/src/app.css
@@ -12,6 +12,7 @@ body {
   font-size: 15px;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 a {
